--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO：修改页面标题 -->
     <title>友链屋 | ryankert</title>
-    <link rel="alternate" type="application/rss+xml" title="idealclover Blogroll" href="/rss.xml">
+    <link rel="alternate" type="application/rss+xml" title="ryankert Blogroll" href="/rss.xml">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -34,7 +34,7 @@
     <script type="module" src="/src/main.js"></script>
     
     
-    <div id="disqus_thread"></div>
+    <div id="disqus_thread" style="width:80%;"></div>
 <script>
     (function() { 
     var d = document, s = d.createElement('script');
