--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
     <script type="module" src="/src/main.js"></script>
     
     
-    <div id="disqus_thread" style="width:80%;"></div>
+    <div id="disqus_thread" style="padding: 6%;"></div>
 <script>
     (function() { 
     var d = document, s = d.createElement('script');
